analytics-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics-containers
          image: denukedissanayake/lugx-analytics-service:latest
          ports:
            - containerPort: 8000
