order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order-containers
          image: denukedissanayake/lugx-order-service:latest
          ports:
            - containerPort: 8001
