webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-containers
          image: denukedissanayake/lugx-webapp:latest
          ports:
            - containerPort: 80
