analytics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: ClusterIP
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
