games-service.yml
apiVersion: v1
kind: Service
metadata:
  name: games-service
spec:
  type: ClusterIP
  selector:
    app: games
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
