order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
